# cvBench

./: .gitmodules  LICENSE  README.md
FPGATests/: README.md
GPUTests/: README.md
GPUTests/Geometric Transformations/testRemap/: CMakeLists.txt
GPUTests/Geometric Transformations/testRemap/src/: testGPURemap.cpp
GPUTests/Geometric Transformations/testResize/: CMakeLists.txt
GPUTests/Geometric Transformations/testResize/src/: testGPUResize.cpp
GPUTests/Geometric Transformations/testWarpAffine/: CMakeLists.txt
GPUTests/Geometric Transformations/testWarpPerspective/: CMakeLists.txt
GPUTests/Geometric Transforms/testWarpAffine/src/: testGPUWarpAffine.cpp
GPUTests/Geometric Transforms/testWarpPerspective/src/: testGPUWarpPerspective.cpp
GPUTests/Image Analysis/testCalcHist/: CMakeLists.txt
GPUTests/Image Analysis/testCalcHist/src/: testGPUCalcHist.cpp
GPUTests/Image Analysis/testEqualizeHist/: CMakeLists.txt
GPUTests/Image Analysis/testEqualizeHist/src/: testGPUEqualizeHist.cpp
GPUTests/Image Analysis/testIntegral/: CMakeLists.txt
GPUTests/Image Analysis/testIntegral/src/: testGPUIntegral.cpp
GPUTests/Image Analysis/testMeanStdDev/: CMakeLists.txt
GPUTests/Image Analysis/testMeanStdDev/src/: testGPUMeanStdDev.cpp
GPUTests/Image Analysis/testMinMaxLoc/: CMakeLists.txt
GPUTests/Image Analysis/testMinMaxLoc/src/: testGPUMinMaxLoc.cpp
GPUTests/Image Arithmatic/testAbsDiff/: CMakeLists.txt
GPUTests/Image Arithmatic/testAccumulate/: CMakeLists.txt
GPUTests/Image Arithmatic/testAccumulateSquare/: CMakeLists.txt
GPUTests/Image Arithmatic/testAccumulateWeighted/: CMakeLists.txt
GPUTests/Image Arithmatic/testAdd/: CMakeLists.txt
GPUTests/Image Arithmatic/testBitwise_and/: CMakeLists.txt
GPUTests/Image Arithmatic/testBitwise_not/: CMakeLists.txt
GPUTests/Image Arithmatic/testBitwise_or/: CMakeLists.txt
GPUTests/Image Arithmatic/testBitwise_xor/: CMakeLists.txt
GPUTests/Image Arithmatic/testMagnitude/: CMakeLists.txt
GPUTests/Image Arithmatic/testMagnitude/src/: testGPUMagnitude.cpp
GPUTests/Image Arithmatic/testMultiply/: CMakeLists.txt
GPUTests/Image Arithmatic/testMultiply/src/: testGPUMultiply.cpp
GPUTests/Image Arithmatic/testPhase/: CMakeLists.txt
GPUTests/Image Arithmatic/testPhase/src/: testGPUPhase.cpp
GPUTests/Image Arithmatic/testSubtract/: CMakeLists.txt
GPUTests/Image Arithmatic/testSubtract/src/: testGPUSubtract.cpp
GPUTests/Image Arithmatic/testThreshold/: CMakeLists.txt
GPUTests/Image Arithmatic/testThreshold/src/: testGPUThreshold.cpp
GPUTests/Image Arithmetic/testAbsDiff/: CMakeLists.txt
GPUTests/Image Arithmetic/testAccumulate/: CMakeLists.txt
GPUTests/Image Arithmetic/testAccumulateSquare/: CMakeLists.txt
GPUTests/Image Arithmetic/testAccumulateSquare/src/: testGPUAccumulateSquare.cpp
GPUTests/Image Arithmetic/testAccumulateWeighted/: CMakeLists.txt
GPUTests/Image Arithmetic/testAdd/: CMakeLists.txt
GPUTests/Image Arithmetic/testAdd/src/: testGPUAdd.cpp
GPUTests/Image Arithmetic/testBitwise_and/: CMakeLists.txt
GPUTests/Image Arithmetic/testBitwise_and/src/: testGPUBitwise_and.cpp
GPUTests/Image Arithmetic/testBitwise_not/: CMakeLists.txt
GPUTests/Image Arithmetic/testBitwise_not/src/: testGPUBitwise_not.cpp
GPUTests/Image Arithmetic/testBitwise_or/: CMakeLists.txt
GPUTests/Image Arithmetic/testBitwise_or/src/: testGPUBitwise_or.cpp
GPUTests/Image Arithmetic/testBitwise_xor/: CMakeLists.txt
GPUTests/Image Arithmetic/testBitwise_xor/src/: testGPUBitwise_xor.cpp
GPUTests/Image Features/testCanny/: CMakeLists.txt
GPUTests/Image Features/testCanny/src/: testGPUCanny.cpp
GPUTests/Image Features/testCornerHarris/: CMakeLists.txt
GPUTests/Image Features/testCornerHarris/src/: testGPUCornerHarris.cpp
GPUTests/Image Features/testFast/: CMakeLists.txt
GPUTests/Image Features/testFast/src/: testGPUFast.cpp
GPUTests/Image Filters/testBoxFilter/: CMakeLists.txt
GPUTests/Image Filters/testBoxFilter/src/: testGPUBoxFilter.cpp
GPUTests/Image Filters/testDilate/: CMakeLists.txt
GPUTests/Image Filters/testDilate/src/: testGPUDilate.cpp
GPUTests/Image Filters/testErode/: CMakeLists.txt
GPUTests/Image Filters/testErode/src/: testGPUErode.cpp
GPUTests/Image Filters/testFilter2D/: CMakeLists.txt
GPUTests/Image Filters/testMedianBlur/: CMakeLists.txt
GPUTests/Image Filters/testMedianBlur/src/: testGPUMedian.cpp
GPUTests/Image Filters/testPyrDown/: CMakeLists.txt
GPUTests/Image Filters/testPyrDown/src/: testGPUPyrDown.cpp
GPUTests/Image Filters/testPyrUp/: CMakeLists.txt
GPUTests/Image Filters/testPyrUp/src/: testGPUPyrUp.cpp
GPUTests/Input Processing/testCombine/: CMakeLists.txt
GPUTests/Input Processing/testCombine/src/: testGPUCombine.cpp
GPUTests/Input Processing/testConvertTo/: CMakeLists.txt
GPUTests/Input Processing/testConvertTo/src/: testGPUConvertTo.cpp
GPUTests/Input Processing/testCvtColor/: CMakeLists.txt
GPUTests/Input Processing/testCvtColor/src/: testGPUCvtColor.cpp
GPUTests/Input Processing/testExtract/: CMakeLists.txt
GPUTests/Input Processing/testExtract/src/: testGPUSplit.cpp
GPUTests/Input Processing/testLUT/: CMakeLists.txt
GPUTests/Input Processing/testLUT/src/: testGPULUT.cpp
GPUTests/Optical Flow & Depth/testOpticalFlowPyr/: CMakeLists.txt
GPUTests/Optical Flow & Depth/testOpticalFlowPyr/src/: testGPUOpticalFlowPyr.cpp
GPUTests/Optical Flow & Depth/testStereoBM/: CMakeLists.txt
GPUTests/testAbsDiff/src/: testGPUAbsDiff.cpp
GPUTests/testAccumulate/: CMakeLists.txt
GPUTests/testAccumulate/src/: testGPUAccumulate.cpp
GPUTests/testAccumulateWeighted/src/: testGPUAccumulateWeighted.cpp
GPUTests/testAdd/: CMakeLists.txt
GPUTests/testBitwise_and/: CMakeLists.txt
GPUTests/testBitwise_not/: CMakeLists.txt
GPUTests/testBitwise_xor/: CMakeLists.txt
GPUTests/testFilter2D/: CMakeLists.txt
GPUTests/testFilter2D/src/: testGPUFilter2D.cpp
(+1 files in other folders)
